# restaurant-inventory

./: .env.example  .gitignore  Dockerfile  GUIA_DOCENTE_ES.txt  README.md  TEACHING.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
scripts/: init_db.ps1  init_db.sh
sql/: schema.postgres.sql  schema.sql  seed.sql
src/inventory/: __init__.py  __main__.py  cli.py  config.py  database.py  inventory.py  models.py
tests/: test_inventory.py
web/: README.md  api.py  requirements.txt  schemas.py
web/static/: app.js  index.html
